#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(compostela, 0.1, [hironobu.k@me.com])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([common/azbuffer.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB(cunit, CU_initialize_registry)
AC_CHECK_LIB(ssl, SSL_library_init)
AC_CHECK_LIB(yaml, yaml_parser_initialize)

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h netdb.h stddef.h stdlib.h string.h sys/socket.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T

AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_REALLOC
AC_FUNC_STAT
AC_FUNC_STRFTIME
AC_CHECK_FUNCS([memchr memmove memset mkdir socket strcasecmp strchr strdup strtoul])

AM_CONDITIONAL(ENABLE_TESTS, test "$ac_cv_lib_cunit_CU_initialize_registry" = yes)

if test "x$prefix" = "xNONE"; then
        prefix=$ac_default_prefix
fi


patheval()
{
	if test "x$1" == "NONE"; then
		echo ""
	else 
		OLD=$1
		NEW=`eval echo $1`
		while test "x$OLD" != "x$NEW"
		do
			OLD=$NEW
			NEW=`eval echo $OLD`
		done
		echo $OLD
	fi
}


AC_DEFINE_UNQUOTED(PATH_SYSCONFDIR, "`patheval $sysconfdir`", [sysconfdir])

AC_CONFIG_FILES([Makefile
                 aggregator/Makefile
                 follower/Makefile
                 tests/Makefile
])
AC_OUTPUT
