sbin_PROGRAMS = comfollower

INCLUDES = -I$(top_srcdir) -I$(includedir) -I$(top_srcdir)/common/

comfollower_SOURCES = main.c \
	appconfig.c appconfig.h \
	../common/scmessage.c ../common/scmessage.h ../common/supports.h ../common/supports.c \
	../common/azlist.h ../common/azlist.c ../common/azbuffer.h ../common/azbuffer.c
